[gd_scene load_steps=4 format=3 uid="uid://qm1ea6fixo4x"]

[ext_resource type="Script" uid="uid://b4turoacujvsl" path="res://scripts/spell_manager_panel.gd" id="1_dogtn"]
[ext_resource type="PackedScene" uid="uid://8o1nqe7w3p21" path="res://scenes/managers/projectile_modifier_manager.tscn" id="2_2cpc6"]
[ext_resource type="Script" uid="uid://c3joh6kqa3pcq" path="res://scripts/util/button_container_control.gd" id="2_d4g6m"]

[node name="SpellManagerPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dogtn")

[node name="SideSpellPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -124.0
offset_right = 200.0
offset_bottom = 176.0
grow_horizontal = 0
grow_vertical = 2

[node name="ButtonContainer" type="BoxContainer" parent="SideSpellPanel"]
layout_mode = 1
script = ExtResource("2_d4g6m")

[node name="OpenCloseButton" type="Button" parent="SideSpellPanel"]
layout_mode = 2
offset_right = 118.0
offset_bottom = 31.0
rotation = 1.5708
text = "Spell Manager"

[node name="ProjectileModifierManager" parent="." instance=ExtResource("2_2cpc6")]

[connection signal="pressedModifier" from="SideSpellPanel/ButtonContainer" to="ProjectileModifierManager" method="_on_button_container_pressed_modifier"]
[connection signal="pressed" from="SideSpellPanel/OpenCloseButton" to="." method="_on_open_close_button_pressed"]
